# ostep-projects

processes-shell/: Cargo.toml  tester.txt  wish  wish.c
processes-shell/src/: main.rs
